Fixed scrollbar issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,6 +66,7 @@ body {
   .particles-js-canvas-el {
     width:100vw !important;
     height:100vh !important;
+    position: absolute;
   }
 }
 
